--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type="text"],input[type="password"],input[type="email"]{
+input[type="text"],input[type="password"],input[type="email"],input[type="number"],textarea,input[type="telephone"]{
     @apply w-full border my-1 py-2 px-3 rounded-2xl;
+}
+textarea{
+    height: 140px
 }
 button{
     @apply bg-gray-300;
