Added account menu

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,7 @@ button.primary{
     background-color: #f5385d;
     @apply bg-primary p-2 w-full text-white rounded-2xl;
 }
+
+li{
+    @apply pr-20 px-2 ;
+}
